--- a/robot/clad/Makefile
+++ b/robot/clad/Makefile
@@ -12,6 +12,7 @@ CLAD_PYTHON=$(CLAD_EMITTER_DIR)/Python_emitter.py
 CLAD_CPP_DECL=./cozmo_CPP_declarations_emitter.py
 CLAD_CPP_SWITCH=./cozmo_CPPLite_switch_emitter.py
 CLAD_CPPLITE_SEND_HELPER=./cozmo_CPPLite_send_helper_emitter.py
+CLAD_HASH=$(CLAD_EMITTER_DIR)/ASTHash_emitter.py
 
 INPUT_DIR=./src/
 OUTPUT_DIR:=../generated/clad/
@@ -41,9 +42,9 @@ vpath %.py $(OUTPUT_DIR_PYTHON)/robot/
 
 all: fourzero lightCube
 
-cpp: $(OUTPUT_H_AND_CPP)
+cpp: $(OUTPUT_H_AND_CPP) $(ENGINE_TO_ROBOT_UNION)_hash.h $(ROBOT_TO_ENGINE_UNION)_hash.h
 
-python: $(OUTPUT_PYTHON)
+python: $(OUTPUT_PYTHON) $(ENGINE_TO_ROBOT_UNION)_hash.py $(ROBOT_TO_ENGINE_UNION)_hash.py
 
 %_switch_group_anim.def : %.clad $(CLAD_CPP_SWITCH)
 	if test -f $(OUTPUT_DIR)robot/$*_switch_group_anim.def; then chmod -f 777 $(OUTPUT_DIR)robot/$*_switch_group_anim.def; fi
@@ -88,6 +89,16 @@ python: $(OUTPUT_PYTHON)
 	chmod -f 555 $(OUTPUT_DIR)robot/$*.h
 	chmod -f 555 $(OUTPUT_DIR)robot/$*.cpp
 
+%_hash.h : %.clad $(CLAD_DEPENDENCIES) $(CLAD_HASH)
+	if test -f $(OUTPUT_DIR)robot/$@; then chmod -f 777 $(OUTPUT_DIR)robot/$@; fi
+	python $(CLAD_HASH) -I $(INPUT_DIR) -o $(OUTPUT_DIR)robot/$@ $<
+	chmod -f 555 $(OUTPUT_DIR)robot/$@
+
+%_hash.py: %.clad $(CLAD_DEPENDENCIES) $(CLAD_HASH)
+	if test -f $(OUTPUT_DIR_PYTHON)robot/$@; then chmod -f 777 $(OUTPUT_DIR_PYTHON)robot/$@; fi
+	python $(CLAD_HASH) -I $(INPUT_DIR) -o $(OUTPUT_DIR_PYTHON)robot/$@ $<
+	chmod -f 555 $(OUTPUT_DIR_PYTHON)robot/$@
+
 %.py : %.clad $(CLAD_DEPENDENCIES) $(CLAD_PYTHON)
 	if test -f $(OUTPUT_DIR_PYTHON)robot/$*.py; then chmod -f 777 $(OUTPUT_DIR_PYTHON)robot/$*.py; fi
 	python $(CLAD_PYTHON) -C $(INPUT_DIR) -I $(INCLUDE_DIRS) -o $(OUTPUT_DIR_PYTHON)robot $*.clad
@@ -97,6 +108,10 @@ cpplilib: cpp
 	@rm -f $(OUTPUT_DIR)/clad.cpp
 	cd $(OUTPUT_DIR); /usr/bin/find . -type f -iname '*.cpp' > cpps.list; awk '{ print "#include \"" $$0 "\"" }' <cpps.list >clad.cpp
 	@rm $(OUTPUT_DIR)cpps.list
+
+hashes:
+	python $(CLAD_HASH) -C $(INPUT_DIR) $(ENGINE_TO_ROBOT_UNION).clad
+	python $(CLAD_HASH) -C $(INPUT_DIR) $(ROBOT_TO_ENGINE_UNION).clad
 
 nrf: cpplilib $(ENGINE_TO_ROBOT_UNION)_switch_from_$(BODY_START_TAG)_to_$(BODY_END_TAG).def $(ENGINE_TO_ROBOT_UNION)_declarations.def $(ROBOT_TO_ENGINE_UNION)_send_helper.h $(ENGINE_TO_ROBOT_UNION)_send_helper.h
 
