- fixed broken webots anim test - re-enabled all working webots tests

--- a/project/build-scripts/webots/webotsTests.cfg
+++ b/project/build-scripts/webots/webotsTests.cfg
@@ -12,14 +12,14 @@ world_file : buildServer.wbt
 #[CST_PickAndPlace]
 #world_file : testWorldPickAndPlace.wbt
 
-#[CST_RobotKidnapping]
-#world_file : testWorldRobotKidnapping.wbt
+[CST_RobotKidnapping]
+world_file : testWorldRobotKidnapping.wbt
 
-#[CST_BasicActions]
-#world_file : testWorldBasicActions.wbt
+[CST_BasicActions]
+world_file : testWorldBasicActions.wbt
 
-#[CST_ActionRetry]
-#world_file : testWorldActionRetry.wbt
+[CST_ActionRetry]
+world_file : testWorldActionRetry.wbt
 
-#[CST_DockActions]
-#world_file : testWorldBasicActions.wbt
+[CST_DockActions]
+world_file : testWorldBasicActions.wbt
